--- a/.editorconfig
+++ b/.editorconfig
@@ -5,8 +5,8 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = 4
 
 [*.txt]
 indent_style = tab
