Reduced payload size (First round)

--- a/8.3/4.87/NORMAL/CEX/SRC/Makefile
+++ b/8.3/4.87/NORMAL/CEX/SRC/Makefile
@@ -1,35 +1,35 @@
 all:
-	@echo -e "Compiling lv2gen...\n"
+	@echo -e "\e[1;33mCompiling lv2gen...\e[0m"
 	@cd lv2gen && make all --no-print-directory
 
-	@echo -e "Compiling nocfw_kern_plugin...\n"
+	@echo -e "\n\e[1;33mCompiling nocfw_kern_plugin...\e[0m"
 	@cd nocfw_kern_plugin/payload && make all --no-print-directory
 	
-	@echo -e "\nCompiling ps2emu_gen..."
+	@echo -e "\n\e[1;33mCompiling ps2emu_gen...\e[0m"
 	@cd ps2emu_gen && make all --no-print-directory
 	
-	@echo -e "\nCompiling ps2netemu_gen..."
+	@echo -e "\n\e[1;33mCompiling ps2netemu_gen...\e[0m"
 	@cd ps2emu_stage2/ps2netemu_gen && make all --no-print-directory
 	
-	@echo -e "\nCompiling ps2emu_stage1_file..."
+	@echo -e "\n\e[1;33mCompiling ps2emu_stage1_file...\e[0m"
 	@cd ps2emu_stage1_file && make all --no-print-directory
 	
-	@echo -e "\nCompiling ps2emu_stage2/gxemu..."
+	@echo -e "\n\e[1;33mCompiling ps2emu_stage2/gxemu...\e[0m"
 	@cd ps2emu_stage2/gxemu && make all --no-print-directory
 	
-	@echo -e "\nCompiling ps2emu_stage2/hwemu..."
+	@echo -e "\n\e[1;33mCompiling ps2emu_stage2/hwemu...\e[0m"
 	@cd ps2emu_stage2/hwemu && make all --no-print-directory
 	
-	@echo -e "\nCompiling ps2emu_stage2/netemu..."
+	@echo -e "\n\e[1;33mCompiling ps2emu_stage2/netemu...\e[0m"
 	@cd ps2emu_stage2/netemu && make all --no-print-directory
 	
-	@echo -e "\nCompiling stage0_file..."
+	@echo -e "\n\e[1;33mCompiling stage0_file...\e[0m"
 	@cd stage0_file && make all --no-print-directory
 	
-	@echo -e "\nCompiling stage2..."
+	@echo -e "\n\e[1;33mCompiling stage2...\e[0m"
 	@cd stage2 && make all --no-print-directory
 	
-	@echo -e "\nCompiling test_payload..."
+	@echo -e "\n\e[1;33mCompiling test_payload...\e[0m"
 	@cd test_payload/payload && make all --no-print-directory
 
-	@echo -e "\nDONE! Files copied to BIN folder"
+	@echo -e "\n\e[1;32mDONE! Files copied to BIN folder\e[0m"
