--- a/8.3/4.87/NORMAL/CEX/SRC/lv2gen/Makefile
+++ b/8.3/4.87/NORMAL/CEX/SRC/lv2gen/Makefile
@@ -7,6 +7,7 @@ LDFLAGS 	= -L. -lstdc++
 all: $(OUTPUT)
 
 clean:
+	@echo -e "\e[1;32mCleaning lv2gen...\e[0m"
 	@rm -f *.o *.exe
 
 $(OUTPUT): $(OBJS)
