--- a/8.3/4.87/NORMAL/CEX/SRC/ps2emu_stage1_file/Makefile
+++ b/8.3/4.87/NORMAL/CEX/SRC/ps2emu_stage1_file/Makefile
@@ -1,5 +1,6 @@
 
 clean:
+	@echo -e "\e[1;32mCleaning ps2emu_stage1_file...\e[0m"
 	@rm -f *.o *.elf *.bin *.self *.map *.lzma ../lv2/src/*.o ../lv1/src/*.o ../debug/src/*.o
 
 all:
