--- a/8.3/4.87/NORMAL/CEX/SRC/ps2emu_stage2/hwemu/Makefile
+++ b/8.3/4.87/NORMAL/CEX/SRC/ps2emu_stage2/hwemu/Makefile
@@ -53,4 +53,5 @@ ps2hwemu_stage2.elf: $(OBJS) ldscript.ld
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
+	@echo -e "\e[1;32mCleaning hwemu...\e[0m"
 	@rm -f *.o *.elf *.bin *.map ../../ps2emu/src/*.o ../../lv1/src/*.o ../../debug/src/*.o
