--- a/8.3/4.87/NORMAL/CEX/SRC/ps2emu_stage2/ps2netemu_gen/Makefile
+++ b/8.3/4.87/NORMAL/CEX/SRC/ps2emu_stage2/ps2netemu_gen/Makefile
@@ -7,6 +7,7 @@ INC 		= -I. -I../../ps2emu/include
 all: $(OUTPUT)
 
 clean:
+	@echo -e "\e[1;32mCleaning ps2netemu_gen...\e[0m"
 	@rm -f *.exe *.o
 
 $(OUTPUT): $(OBJS)
