--- a/8.3/4.84/REBUG/REX/SRC/stage0_file/Makefile_484D
+++ b/8.3/4.84/REBUG/REX/SRC/stage0_file/Makefile_484D
@@ -9,7 +9,7 @@ LV2_KERNEL		= ../lv2gen/lv2Dkernel.self
 KERNEL_TARGET	= lv2Dkernel.self
 PAYLOAD			= ../nocfw_kern_plugin/payload/payload.bin
 STAGE0 			= stage0_484D.bin
-STAGE0_ADDR_CEX	= 0x273954
+STAGE0_ADDR_DEX	= 0x273954
 INCLUDE			=  ../lv2/include ../lv1/include ../debug/include
 
 INCLUDE			+= $(PS3DEV)/ppu/ppu/include
@@ -31,10 +31,10 @@ all: $(TARGET).bin
 
 %.bin: %.elf
 	$(OBJCOPY) -O binary $< $@	
-	$(LV2GEN) $(LV2_KERNEL) $(STAGE0) $(STAGE0_ADDR_CEX) $(PAYLOAD)
+	$(LV2GEN) $(LV2_KERNEL) $(STAGE0) $(STAGE0_ADDR_DEX) $(PAYLOAD)
 	@rm -f *.o *.elf ../lv2/src/*.o ../lv1/src/*.o *.bin
 	@mv lv2_kernel.self.cobra.self $(KERNEL_TARGET)
-	@cp $(KERNEL_TARGET) ../../BIN
+	@cp $(KERNEL_TARGET) ../../BIN	
 
 $(TARGET).elf: $(OBJS) stage0.ld
 	$(CC) $(LDFLAGS) -o $@ $(OBJS)
