--- a/8.3/4.84/REBUG/REX/SRC/stage0_file/Makefile_484C
+++ b/8.3/4.84/REBUG/REX/SRC/stage0_file/Makefile_484C
@@ -7,7 +7,7 @@ STRIP			:= ppu-strip
 LV2GEN 			= ../lv2gen/lv2gen
 LV2_KERNEL		= ../lv2gen/lv2Ckernel.self
 KERNEL_TARGET	= lv2Ckernel.self
-PAYLOAD			= ../nocfw_kern_plugin/payload/payload.bin
+PAYLOAD_CEX		= ../nocfw_kern_plugin/payload/payload.cex.bin
 STAGE0 			= stage0_484C.bin
 STAGE0_ADDR_CEX	= 0x26C8DC
 INCLUDE			=  ../lv2/include ../lv1/include ../debug/include
@@ -31,7 +31,7 @@ all: $(TARGET).bin
 
 %.bin: %.elf
 	$(OBJCOPY) -O binary $< $@	
-	$(LV2GEN) $(LV2_KERNEL) $(STAGE0) $(STAGE0_ADDR_CEX) $(PAYLOAD)
+	$(LV2GEN) $(LV2_KERNEL) $(STAGE0) $(STAGE0_ADDR_CEX) $(PAYLOAD_CEX)
 	@rm -f *.o *.elf ../lv2/src/*.o ../lv1/src/*.o *.bin
 	@mv lv2_kernel.self.cobra.self $(KERNEL_TARGET)
 	@cp $(KERNEL_TARGET) ../../BIN
