--- a/8.3/4.84/REBUG/REX/SRC/stage0_file/Makefile_484D
+++ b/8.3/4.84/REBUG/REX/SRC/stage0_file/Makefile_484D
@@ -7,7 +7,7 @@ STRIP			:= ppu-strip
 LV2GEN 			= ../lv2gen/lv2gen
 LV2_KERNEL		= ../lv2gen/lv2Dkernel.self
 KERNEL_TARGET	= lv2Dkernel.self
-PAYLOAD			= ../nocfw_kern_plugin/payload/payload.bin
+PAYLOAD_DEX		= ../nocfw_kern_plugin/payload/payload.dex.bin
 STAGE0 			= stage0_484D.bin
 STAGE0_ADDR_DEX	= 0x273954
 INCLUDE			=  ../lv2/include ../lv1/include ../debug/include
@@ -31,7 +31,7 @@ all: $(TARGET).bin
 
 %.bin: %.elf
 	$(OBJCOPY) -O binary $< $@	
-	$(LV2GEN) $(LV2_KERNEL) $(STAGE0) $(STAGE0_ADDR_DEX) $(PAYLOAD)
+	$(LV2GEN) $(LV2_KERNEL) $(STAGE0) $(STAGE0_ADDR_DEX) $(PAYLOAD_DEX)
 	@rm -f *.o *.elf ../lv2/src/*.o ../lv1/src/*.o *.bin
 	@mv lv2_kernel.self.cobra.self $(KERNEL_TARGET)
 	@cp $(KERNEL_TARGET) ../../BIN
